[tool.poetry]
name = "service-repository"
version = "0.2.0"
description = "Asynchronous abstract methods for service layer built into the repository pattern for SQLAlchemy or MongoDB with the same service layer."
authors = ["Fernando Miranda <fndmiranda@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fndmiranda/service-repository"
repository = "https://github.com/fndmiranda/service-repository"
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
sqlmodel = "^0.0.8"
flake8 = "^6.1.0"
isort = "^5.10.1"
black = "^23.7.0"
bandit = "^1.7.1"
pytest-cov = "^4.1.0"
pytest-deadfixtures = "^2.2.1"
motor = "^3.3.0"
safety = "^1.10.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
